# homey-perception

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
scripts/: detect_and_map.py
src/: CMakeLists.txt  Consumer.h  FrameProvider.cpp  FrameProvider.h  MLPipeline.cpp  MLPipeline.h  Manager.h  Provider.h  RenderLoop.h  Types.h  VisualizePipeline.cpp  VisualizePipeline.h  main.cpp  types.h
tests/: CMakeLists.txt
